# lompe

./: .gitignore  .gitmodules  .zenodo.json  CITATION.cff  README.rst  __init__.py  changelog.md  pyproject.toml  todo.md
.github/workflows/: main.yml
binder/: environment.yml  postBuild
data/: hardy_hall_coefficients.txt
data_tools/: README  dataloader.py  supermag_api.py
development/: README  cmodel.py  interpolation_test.py  superdarn_fitacf_to_pd.py
examples/: AMPERE conductance model example.ipynb  Data_handling_with_Lompe.ipynb  MI_coupling.ipynb  README  Saving_model_and_data_example.ipynb  Saving_model_output.ipynb  data_tools_example.ipynb  lompe_demo.ipynb  ssusi conductance example.ipynb  ssusi_conductance_example_new.ipynb  synthetic_global_data_example.ipynb
examples/code_paper_figures/: 01_cubed_sphere_weimer_potential.ipynb  02_2D_continuity_equation.ipynb  03_Conductance_example.ipynb  03_SECS_on_cubed_sphere_grid.ipynb  04_Conductance_example.ipynb  04_SECS_on_cubed_sphere_grid.ipynb  04_Visualization_with_Polplot.ipynb  05_Visualization_with_Polar_plots.ipynb  05_Visualization_with_Polarplot.ipynb  05_Visualization_with_Polplot.ipynb  07_standard_Lompe_example.ipynb  08_MI_coupling_w_Lompe.ipynb  2d_continuity_equation.ipynb  README
examples/demoscripts/: Why_vanilla_is_wrong.py  dataloader_demo.py  demo.py  demo_lompe2.py  demo_lompe2_KF.py  demo_lompe2_multiple.py  demo_resolution.py  demo_resolution_n_scale.py
examples/experimental/: AMPERE conductance model example.ipynb  testing_different_ground_induction_methods.ipynb
examples/lompe_paper_figures/: 01_data_distribution_example.ipynb  02_example_grid_figure.ipynb  03_synthetic_demo_for_lompe.ipynb  04_north_america.ipynb  05_hilda_event.ipynb  06_polar_cap_event.ipynb  07_ideal_examples.ipynb  README
examples/sample_dataset/: 20010817_superdarn_grdmap.h5  20141215_ssies_f18_hairston.h5  gamera.nc
lompe/: __init__.py
lompe/data/: README  chapman_euv_productionvalues.txt  hardy_pedersen_coefficients.txt  robinson_conductance_coefs.txt  sdarn_2010_to_2021.csv  supermag_stations.csv  zhang_paxton_eflux_coeff.txt  zhang_paxton_emean_coeff.txt
lompe/data_tools/: README  ampere.py  champ.py  data_tools_example.ipynb  datadownloader.py  dataloader.py  dmsp_ssies.py  dmsp_ssusi.py  get_lompe_data.py  superdarn.py  supermag.py  supermag_api.py  swarm.py
lompe/model/: Kalman.py  __init__.py  alman.py  data.py  design.py  designer.py  evaluator.py  gridhandler.py  kalman.py  kalmanfilter.py  misc.py  model.py  regularizer.py  save_model.py  solver.py  timeseries.py  varcheck.py  (+1 more)
model/: __init__.py  cmodel.py  data.py  model.py  varcheck.py  visualization.py
ppigrf/: ppigrf.py
secsy/: .gitignore  LICENSE  README.md  __init__.py
testing/: b-spline_in_time_test.py  bspline-test.py  lompe_edge_effect_test.py  two_ways_to_calculate_FAC.py
tests/: test_imports.py
utils/: conductance.py  coords.py  dipole.py  sunlight.py  time.py
(+20 files in other folders)
