[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lompe"
version = "1.1.0"
dependencies = [
    "apexpy",
    "matplotlib",
    "numpy",
    "pandas",
    "ppigrf",
    "scipy",
    "xarray",
    "dipole @ git+https://github.com/smithara/dipole.git@packaging#egg=dipole",
    "polplot @ git+https://github.com/smithara/polplot.git@packaging#egg=polplot",
    "secsy @ git+https://github.com/smithara/secsy.git@packaging#egg=secsy",
]

[project.optional-dependencies]
extras = [
    "astropy",
    "cdflib",
    # "madgrigalweb",  # don't know why this fails
    "netCDF4",
    "pyAMPS",
    "pydarn",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lompe"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = [
    "tests",
]
